# python-learning

./: README.md
01 - POO/01 - classes e objetos/: 01_bicicletaria.py
01 - POO/03 - heranca/: 03_heranca.py
01 - POO/04 - encapsulamento/: 05_propriedades.py
01 - POO/06 - atributos e instancias/: 01_atributos.py
03 - APIs FastAPI/02 - Introducao ao FastAPI/dio_fastapi/: .env.example  Makefile  blog.db  database.py  main.py  pyproject.toml
03 - APIs FastAPI/02 - Introducao ao FastAPI/dio_fastapi/controllers/: post.py
03 - APIs FastAPI/02 - Introducao ao FastAPI/dio_fastapi/controllers/auth/: auth.py  auth_handler.py
03 - APIs FastAPI/02 - Introducao ao FastAPI/dio_fastapi/models/: post.py
03 - APIs FastAPI/02 - Introducao ao FastAPI/dio_fastapi/src/: config.py  database.py  main.py
03 - APIs FastAPI/02 - Introducao ao FastAPI/dio_fastapi/src/controllers/: post.py
03 - APIs FastAPI/02 - Introducao ao FastAPI/dio_fastapi/src/models/: post.py
03 - APIs FastAPI/02 - Introducao ao FastAPI/dio_fastapi/src/schemas/: post.py
03 - APIs FastAPI/02 - Introducao ao FastAPI/dio_fastapi/src/views/: post.py
03 - APIs FastAPI/02 - Introducao ao FastAPI/dio_fastapi/views/: post.py
03 - APIs FastAPI/02 - Introducao ao FastAPI/workout_api/: .env  Makefile  alembic.ini  docker-compose.yml  pyproject.toml
03 - APIs FastAPI/02 - Introducao ao FastAPI/workout_api/alembic/: env.py
03 - APIs FastAPI/02 - Introducao ao FastAPI/workout_api/alembic/versions/: 0d79c2c84bb1_init_migrations.py  a9f4ca9b837d_initial_migration.py  e67e74728095_.py  f98865decf3a_migrations.py
03 - APIs FastAPI/02 - Introducao ao FastAPI/workout_api/workout_api/: main.py
03 - APIs FastAPI/02 - Introducao ao FastAPI/workout_api/workout_api/atleta/: controller.py  models.py  schemas.py
03 - APIs FastAPI/02 - Introducao ao FastAPI/workout_api/workout_api/categorias/: controller.py  models.py  schemas.py
03 - APIs FastAPI/02 - Introducao ao FastAPI/workout_api/workout_api/centro_treinamento/: controller.py  models.py  schemas.py
03 - APIs FastAPI/02 - Introducao ao FastAPI/workout_api/workout_api/contrib/: dependencies.py  models.py  schemas.py
04 - Banco de Dados/sqlalchemy/: __init__.py  pyproject.toml  sqlalchemy.md
04 - Banco de Dados/sqlalchemy/user/: models.py  settings.py
1-POO/: test.py
account_api/: Makefile  alembic.ini  docker-compose.yaml  pyproject.toml  swagger-schema.json
account_api/account_api/: main.py  routers.py
account_api/account_api/account/: controller.py  controllers.py  models.py  schemas.py
account_api/account_api/api/account/: schemas.py
account_api/account_api/api/accounts/: controller.py  models.py  schemas.py
account_api/account_api/api/auth/: controller.py  models.py  schemas.py  services.py
account_api/account_api/api/transactions/: controller.py  models.py  schemas.py
account_api/account_api/api/users/: controller.py  models.py  schemas.py
account_api/account_api/client/: controller.py  controllers.py  models.py  schemas.py  services.py
account_api/account_api/configs/: database.py
account_api/account_api/contrib/: repository.py
account_api/account_api/core/: auth.py  database.py  security.py
account_api/account_api/core/auth/: auth_bearer.py  auth_handler.py
account_api/account_api/core/configs/: logger_handler.py  logging_config.json
account_api/account_api/deposito/: schemas.py
account_api/account_api/transactions/: controller.py  controllers.py  models.py  schemas.py
account_api/migrations/: env.py
account_api/migrations/versions/: 040a101e0c55_fix_relation_clients_and_transactions_.py  1a7a537c0d79_account_table_agencia_num_string_type.py  34b3569d7d16_add_jwt_auth_for_client.py  3b9b76dfbc50_add_table_account.py  428c1bdeab57_hash_password_limit_255.py  43a3ae8aa4ed_fix_relation_clients_and_transactions_.py  69899715ad2b_update_database_table.py  7be3905b5845_add_value_column_in_account_table.py  7d300428f65d_.py  7df292d5243f_create_users_table.py  81d2085f1db8_add_disabled_column_to_client.py  8b78b605feb4_fix_relation_clients_and_transactions_.py  8ccf471640a2_add_age_column_to_users.py  8fe2c57da051_create_tables.py  9b6748f82cee_adicionando_relacionamento_client_e_.py  a089880eba26_add_transaction_relationship_to_client_.py  af15d37c3202_fix_relation_clients_and_transactions_.py  b4439f1c39fd_fix_relation_clients_and_transactions_.py  b56954cb89ea_alterando_uuid_de_transacoes_para_id_.py  ceccf044c08f_add_relation_account_table_and_client.py  d1d772da1cbb_fix_relation_clients_and_transactions_.py  d35d8eb72e12_add_age_column_to_users.py  f52df9484369_crate_table_clients.py
(+28 files in other folders)
