[project]
name = "intro_sqlalchemy"
version = "0.1.0"
description = ""
authors = [
    {name = "Samuel-Work",email = "patriciosamuel097@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "pymongo (>=4.15.3,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
