[tool.poetry]
name = "workout_api"
version = "0.1.0"
description = ""
authors = ["Samuel Olivera <patriciosamuel097@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.120.0"
uvicorn = "^0.38.0"
SQLAlchemy = "^2.0.44"
alembic = "^1.17.0"
asyncpg = "^0.30.0"
pydantic-settings = "^2.11.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
